# opencpn-libs

./: .gitmodules
marnav/: CMakeLists.txt
